--- a/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.html
@@ -11,14 +11,14 @@
       </div>
 
       <div fxLayout="row wrap" class="w-100" fxLayoutAlign="start center" fxLayoutGap="15px">
-        <cma-input fxFlex="20" [isReadOnly]="true" [form]="getPersonalForm" controlName="lastname" label="Lastname"></cma-input>
-        <cma-input fxFlex="20" [isReadOnly]="true" [form]="getPersonalForm" controlName="firstname" label="Firstname"></cma-input>
-        <cma-input fxFlex="20" [isReadOnly]="true" [form]="getPersonalForm" controlName="middlename" label="Middlename"></cma-input>
-        <cma-input fxFlex="20" [isReadOnly]="true" [form]="getPersonalForm" controlName="citizenship" label="Citizenship"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getPersonalForm" controlName="lastname" label="Lastname"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getPersonalForm" controlName="firstname" label="Firstname"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getPersonalForm" controlName="middlename" label="Middlename"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getPersonalForm" controlName="citizenship" label="Citizenship"></cma-input>
       </div>
       <div fxLayout="row wrap" class="w-100" fxLayoutAlign="start center" fxLayoutGap="15px">
         <cma-input [isReadOnly]="true" [form]="getPersonalForm" controlName="gender" label="Gender"></cma-input>
-        <cma-input [isReadOnly]="true" [form]="getPersonalForm" controlName="dateOfBirth" label="Civil Status"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getPersonalForm" controlName="civilStatus" label="Civil Status"></cma-input>
         <cma-input [isReadOnly]="true" [form]="getPersonalForm" controlName="dateOfBirth" label="Date of Birth"></cma-input>
         <cma-input [isReadOnly]="true" [form]="getPersonalForm" controlName="occupation" label="Occupation"></cma-input>
       </div>
@@ -39,14 +39,14 @@
     <div class="content-personal" fxLayout="column" fxLayoutAlign="start start">
       <h4>Partner Information</h4>
       <div fxLayout="row wrap" class="w-100" fxLayoutAlign="start center" fxLayoutGap="15px">
-        <cma-input fxFlex="20" [isReadOnly]="true" [form]="getPartnerForm" controlName="lastname" label="Lastname"></cma-input>
-        <cma-input fxFlex="20" [isReadOnly]="true" [form]="getPartnerForm" controlName="firstname" label="Firstname"></cma-input>
-        <cma-input fxFlex="20" [isReadOnly]="true" [form]="getPartnerForm" controlName="middlename" label="Middlename"></cma-input>
-        <cma-input fxFlex="20" [isReadOnly]="true" [form]="getPartnerForm" controlName="citizenship" label="Citizenship"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="lastname" label="Lastname"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="firstname" label="Firstname"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="middlename" label="Middlename"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="citizenship" label="Citizenship"></cma-input>
       </div>
       <div fxLayout="row wrap" class="w-100" fxLayoutAlign="start center" fxLayoutGap="15px">
         <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="gender" label="Gender"></cma-input>
-        <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="dateOfBirth" label="Civil Status"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="civilStatus" label="Civil Status"></cma-input>
         <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="dateOfBirth" label="Date of Birth"></cma-input>
         <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="occupation" label="Occupation"></cma-input>
       </div>
