--- a/src/styleguide/atoms/input.scss
+++ b/src/styleguide/atoms/input.scss
@@ -3,6 +3,7 @@
   margin: 0;
   height: 35px;
   font-size: 14px;
+  width: 100%;
 }
 .p-float-label label {
   margin-top: -.3rem;
@@ -10,10 +11,6 @@
 }
 .p-float-label input:focus ~ label, .p-float-label input.p-filled ~ label, .p-float-label textarea:focus ~ label, .p-float-label textarea.p-filled ~ label, .p-float-label .p-inputwrapper-focus ~ label, .p-float-label .p-inputwrapper-filled ~ label {
   top: -.65rem !important;
-}
-cma-input {
-  min-width: 193px;
-  width: 193px;
 }
 input {
   font-size: 14 !important;
