implement service toast and inteceptor loader

--- a/src/styleguide/index.scss
+++ b/src/styleguide/index.scss
@@ -12,6 +12,7 @@
 @import './atoms/label';
 @import './atoms/placeholder';
 @import './atoms/calendar';
+@import './atoms/toast';
 
 @import './molecules/dialog';
 @import './molecules/panel';
