--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
+<p-toast position="top-center" key="t" (onClose)="onReject()" [baseZIndex]="5000">
+  <ng-template let-message pTemplate="message">
+    <h4>{{message?.summary}}</h4>
+  </ng-template>
+</p-toast>
+
+<p-blockUI [blocked]="appLoading">
+  <div fxFlexFill fxLayout="row" fxLayoutAlign="center center">
+    <i class="pi pi-spin pi-spinner" style="font-size: 2rem"></i>
+  </div>
+</p-blockUI>
+
 <div class="router-container">
   <router-outlet></router-outlet>
 </div>
