--- a/src/app/modules/on-boarding/components/on-boarding-occupants/on-boarding-occupants.component.scss
+++ b/src/app/modules/on-boarding/components/on-boarding-occupants/on-boarding-occupants.component.scss
@@ -30,6 +30,11 @@
   width: 100%;
   margin-bottom: 20px !important;
 }
+.pi-users {
+  color: $color-gray-1;
+  font-size: 3rem;
+  margin-bottom: 10px !important;
+}
 .action-btns {
   border-top: thin $color-gray-2 solid;
   padding-top: 20px;
