--- a/src/app/modules/on-boarding/components/on-boarding-personal/on-boarding-personal.component.scss
+++ b/src/app/modules/on-boarding/components/on-boarding-personal/on-boarding-personal.component.scss
@@ -55,8 +55,8 @@
     min-width: 210px;
     max-width: 210px;
   }
-  p-dropdown.dropdown .p-dropdown {
-    width: 195px;
+  .p-dropdown {
+    width: 150px;
   }
 }
 @media (max-width: 1280px) {
