--- a/src/app/modules/on-boarding/components/on-boarding-spouse-info/on-boarding-spouse-info.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-spouse-info/on-boarding-spouse-info.component.html
@@ -1,5 +1,5 @@
-<div class="partner-container" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
-  <h2>Partner Information</h2>
+<div class="spouse-container" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
+  <h2>Spouse Information</h2>
 
   <div class="content">
     <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="20px">
