--- a/src/app/modules/on-boarding/components/on-boarding-spouse-info/on-boarding-spouse-info.component.scss
+++ b/src/app/modules/on-boarding/components/on-boarding-spouse-info/on-boarding-spouse-info.component.scss
@@ -10,7 +10,7 @@
     width: 100%;
   }
 }
-.partner-container {
+.spouse-container {
   padding: 20px;
   margin: 0 auto;
   width: 100%;
@@ -26,7 +26,7 @@
   height: 100%;
   max-width: 800px;
 }
-.content-partner {
+.content-spouse {
   h5 {
     margin: 0 0 14px 0;
   }
@@ -60,7 +60,7 @@
   }
 }
 @media (max-width: 1280px) {
-  .partner-container {
+  .spouse-container {
     max-width: 100%;
     padding: 20px 20px;
     max-width: 850px;
@@ -73,7 +73,7 @@
     padding-top: 20px;
     width: 100%;
   }
-  .content-partner {
+  .content-spouse {
     width: 100%;
     max-width: 1100px;
     margin: 0 auto;
