--- a/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.scss
+++ b/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.scss
@@ -37,7 +37,7 @@
   width: 840px;
   padding-left: 10px;
 }
-.content-personal, .occupants-container, .documents-container {
+.content-personal, .occupants-container, .documents-container, .vehicles-container {
   h4 {
     margin: 0 0 7px 0;
     color: var(--blue-600);
