--- a/src/app/shared/components/cma-stepper/cma-stepper.component.html
+++ b/src/app/shared/components/cma-stepper/cma-stepper.component.html
@@ -1,4 +1,4 @@
-<p-timeline [value]="stepper" layout="horizontal" align="top" [ngClass]="{'active-one': currStep == '1', 'active-two': currStep == '2', 'active-three': currStep == '3', 'active-four': currStep == '4', 'active-five': currStep == '5', 'active-six': currStep == '6'}">
+<p-timeline [value]="stepper" layout="horizontal" align="top" [ngClass]="{'active-one': currStep == '1', 'active-two': currStep == '2', 'active-three': currStep == '3', 'active-four': currStep == '4', 'active-five': currStep == '5', 'active-six': currStep == '6', 'active-seven': currStep == '7'}">
   <ng-template pTemplate="content" let-step>
     <span>{{step?.label}}</span>
   </ng-template>
