--- a/src/app/shared/components/cma-stepper/cma-stepper.component.scss
+++ b/src/app/shared/components/cma-stepper/cma-stepper.component.scss
@@ -8,7 +8,8 @@
   .active-three .p-timeline-event:nth-child(3),
   .active-four .p-timeline-event:nth-child(4),
   .active-five .p-timeline-event:nth-child(5),
-  .active-six .p-timeline-event:nth-child(6) {
+  .active-six .p-timeline-event:nth-child(6),
+  .active-seven .p-timeline-event:nth-child(7) {
     .p-timeline-event-marker {
       border: 2px solid $color-blue !important;
     }
