--- a/src/app/modules/on-boarding/components/on-boarding-document/on-boarding-document.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-document/on-boarding-document.component.html
@@ -2,8 +2,10 @@
   <h2>Upload Documents</h2>
 
   <div class="content" fxLayout="row wrap" fxLayoutAlign="start start" fxLayoutGap="20px">
-    <cma-upload-thumb *ngFor="let document of uploadDocuments" [label]="getFileName(document)" (filterEmitter)="onUpload($event, document)" [form]="form" [controlName]="document?.formName" [hasUpload]="hasFile(form.get(document?.formName)?.value?.file?.name, document?.label)">
-    </cma-upload-thumb>
+    <p-fileUpload name="docs[]" multiple="multiple" (onSelect)="onUpload($event)" [showUploadButton]="false" [showCancelButton]="false" accept="application/pdf,application/msword,
+    application/vnd.openxmlformats-officedocument.wordprocessingml.document" maxFileSize="1000000">
+    </p-fileUpload>
+
   </div>
 
   <div class="action-btns" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
