bulk ui refinements

--- a/src/app/modules/dashboard/components/dashboard-on-boarding-panel-content/dashboard-on-boarding-panel-content.component.html
+++ b/src/app/modules/dashboard/components/dashboard-on-boarding-panel-content/dashboard-on-boarding-panel-content.component.html
@@ -14,7 +14,7 @@
         </div>
       </div>
     </div>
-    <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="50px">
+    <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="30px">
       <div class="pi-thumb" fxFlex="30">
         <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
           <span>Lastname:</span>
@@ -80,7 +80,7 @@
   <!-- spouse information -->
   <div>
     <div class="content-title">Spouse Information</div>
-    <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="50px">
+    <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="30px">
       <div class="pi-thumb" fxFlex="30">
         <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
           <span>Lastname:</span>
@@ -144,7 +144,7 @@
           <span>One Oasis Cebu St.</span>
         </div>
         <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
-          <span>Business Contact No.:</span>
+          <span>Bus. Contact No.:</span>
           <span>09564211445</span>
         </div>
         <div fxLayout="row" fxLayoutAlign="start end" fxLayoutGap="5px">
