--- a/src/app/modules/dashboard/components/dashboard-on-boarding/dashboard-on-boarding.component.html
+++ b/src/app/modules/dashboard/components/dashboard-on-boarding/dashboard-on-boarding.component.html
@@ -9,7 +9,7 @@
         <p-menu #menu [popup]="true" [model]="settingItems"></p-menu>
       </div>
     </div>
-    <div class="panel-actions">
+    <div class="panel-actions" fxLayout="row" fxLayoutAlign="start center">
       <div fxFlex fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="10px">
         <cma-input-search fxFlex="70"></cma-input-search>
         <cma-multi-select fxFlex></cma-multi-select>
