--- a/src/styleguide/index.scss
+++ b/src/styleguide/index.scss
@@ -13,6 +13,7 @@
 @import './atoms/placeholder';
 @import './atoms/calendar';
 @import './atoms/toast';
+@import './atoms/error';
 
 @import './molecules/dialog';
 @import './molecules/panel';
