--- a/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.html
@@ -2,6 +2,7 @@
   <div class="content" fxLayout="column" fxLayoutAlign="start start" fxLayoutGap="20px">
     <!-- personal information -->
     <div class="content-personal" fxLayout="column" fxLayoutAlign="start start">
+      <div *ngIf="!hasDocs" class="well-error">No documents uploaded</div>
       <h4>Personal Information</h4>
       <div class="w-100" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="15px">
         <cma-input [form]="getPersonalForm" controlName="buildingNo" label="Building #" [value]="'Building #9'"></cma-input>
@@ -107,7 +108,7 @@
 
     <div class="action-btns" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
       <button pButton pRipple type="button" (click)="onPrev()" label="Previous" class="p-button-rounded default"></button>
-      <button pButton pRipple type="button" (click)="onSubmit()" label="Submit" class="p-button-rounded success"></button>
+      <button [disabled]="!form.valid || !hasDocs" pButton pRipple type="button" (click)="onSubmit()" label="Submit" class="p-button-rounded success"></button>
     </div>
   </div>
 
