--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,6 +21,9 @@ h6 {
   font-weight: 500;
   color: $color-black-2;
 }
+div, span, p {
+  font-family: 'Poppins', sans-serif;
+}
 h1 {
   font-size: 24px;
 }
