display added boarders

--- a/src/app/modules/dashboard/components/dashboard-homeowners/dashboard-homeowners.component.scss
+++ b/src/app/modules/dashboard/components/dashboard-homeowners/dashboard-homeowners.component.scss
@@ -100,7 +100,7 @@ img {
     min-width: 120px;
   }
   mat-expansion-panel.mat-expanded {
-    border-left: 2px $color-gray-blue solid;
+    border-left: 2px $color-gray-2 solid;
   }
   .mat-expansion-panel-header {
     padding: 20px 20px 20px 10px;
