--- a/src/app/shared/components/cma-top-nav/cma-top-nav.component.scss
+++ b/src/app/shared/components/cma-top-nav/cma-top-nav.component.scss
@@ -28,6 +28,9 @@
     color: $color-white;
     cursor: pointer;
     font-size: 14px;
+    &:hover {
+      color: $color-gray-3 !important;
+    }
   }
   img {
     width: 25px;
@@ -56,6 +59,9 @@
     height: 55px;
     padding: 0 10px;
     font-size: 14px;
+    &:hover {
+      color: $color-gray-3 !important;
+    }
   }
 }
 .underlined {
