--- a/src/styleguide/index.scss
+++ b/src/styleguide/index.scss
@@ -14,6 +14,7 @@
 @import './atoms/calendar';
 @import './atoms/toast';
 @import './atoms/error';
+@import './atoms/menu';
 
 @import './molecules/dialog';
 @import './molecules/panel';
