--- a/src/app/modules/dashboard/components/dashboard-on-boarding-panel-content/dashboard-on-boarding-panel-content.component.scss
+++ b/src/app/modules/dashboard/components/dashboard-on-boarding-panel-content/dashboard-on-boarding-panel-content.component.scss
@@ -13,21 +13,25 @@
     height: 35px;
     padding-bottom: 5px;
     span {
+      white-space: nowrap;
       &:nth-child(1) {
         font-weight: 500;
-        font-size: 12px;
+        font-size: 13px;
         color: $color-black-3;
       }
       &:nth-child(2) {
         font-weight: 400;
-        font-size: 12px;
+        font-size: 13px;
         color: $color-black-1;
       }
     }
   }
 }
 .content-title {
-  font-weight: 500;
+  font-weight: 600;
+  color: $color-black-2;
+  position: relative;
+  left: -5px;
 }
 .personal-info-container {
   > div {
