--- a/src/app/modules/dashboard/components/dashboard-on-boarding-panel-document/dashboard-on-boarding-panel-document.component.html
+++ b/src/app/modules/dashboard/components/dashboard-on-boarding-panel-document/dashboard-on-boarding-panel-document.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="5px">
-  <div *ngFor="let document of uploadedDocuments" class="document-thumb" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="5px">
+  <div *ngFor="let document of item?.documents" class="document-thumb" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="5px">
     <img [src]="svgPath + '24x24/word.svg'" />
-    <span>{{ document?.label }}</span>
+    <span>{{ document?.name }}</span>
   </div>
 </div>
