refactor spouse and edit document state

--- a/src/app/modules/on-boarding/components/on-boarding-document/on-boarding-document.component.scss
+++ b/src/app/modules/on-boarding/components/on-boarding-document/on-boarding-document.component.scss
@@ -3,6 +3,10 @@
   @include onboarding-host-start ;
   place-content: flex-start !important;
 }
+ul {
+  list-style-type: none;
+  padding: 0 0 0 10px;
+}
 .upload-thumb {
   > div {
     height: 140px;
