--- a/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-review/on-boarding-review.component.html
@@ -40,27 +40,27 @@
     <div class="content-personal" fxLayout="column" fxLayoutAlign="start start">
       <h4>Spouse Information</h4>
       <div fxLayout="row wrap" class="w-100" fxLayoutAlign="start center" fxLayoutGap="15px">
-        <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="lastname" label="Lastname"></cma-input>
-        <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="firstname" label="Firstname"></cma-input>
-        <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="middlename" label="Middlename"></cma-input>
-        <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="citizenship" label="Citizenship"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getSpouseForm" controlName="lastname" label="Lastname"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getSpouseForm" controlName="firstname" label="Firstname"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getSpouseForm" controlName="middlename" label="Middlename"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getSpouseForm" controlName="citizenship" label="Citizenship"></cma-input>
       </div>
       <div fxLayout="row wrap" class="w-100" fxLayoutAlign="start center" fxLayoutGap="15px">
-        <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="gender" label="Gender"></cma-input>
-        <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="civilStatus" label="Civil Status"></cma-input>
-        <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="dateOfBirth" label="Date of Birth"></cma-input>
-        <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="occupation" label="Occupation"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getSpouseForm" controlName="gender" label="Gender"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getSpouseForm" controlName="civilStatus" label="Civil Status"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getSpouseForm" controlName="dateOfBirth" label="Date of Birth"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getSpouseForm" controlName="occupation" label="Occupation"></cma-input>
       </div>
       <div fxLayout="row wrap" class="w-100" fxLayoutAlign="start center" fxLayoutGap="15px">
-        <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="tin" label="TIN"></cma-input>
-        <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="busEmail" label="Bus. Email"></cma-input>
-        <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="busAddress" label="Bus. Address"></cma-input>
-        <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="busContactNo" label="Bus. Contact No."></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getSpouseForm" controlName="tin" label="TIN"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getSpouseForm" controlName="busEmail" label="Bus. Email"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getSpouseForm" controlName="busAddress" label="Bus. Address"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getSpouseForm" controlName="busContactNo" label="Bus. Contact No."></cma-input>
       </div>
       <div fxLayout="row wrap" class="w-100" fxLayoutAlign="start center" fxLayoutGap="15px">
-        <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="idType" label="ID Type"></cma-input>
-        <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="idNo" label="ID No."></cma-input>
-        <cma-input [isReadOnly]="true" [form]="getPartnerForm" controlName="uploadedIdFile" label="Upload File"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getSpouseForm" controlName="idType" label="ID Type"></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getSpouseForm" controlName="idNo" label="ID No."></cma-input>
+        <cma-input [isReadOnly]="true" [form]="getSpouseForm" controlName="uploadedIdFile" label="Upload File"></cma-input>
       </div>
     </div>
 
