--- a/src/app/modules/on-boarding/components/on-boarding-document/on-boarding-document.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-document/on-boarding-document.component.html
@@ -2,10 +2,21 @@
   <h2>Upload Documents</h2>
 
   <div class="content" fxLayout="row wrap" fxLayoutAlign="start start" fxLayoutGap="20px">
-    <p-fileUpload name="docs[]" multiple="multiple" (onSelect)="onUpload($event)" [customUpload]="true" [showUploadButton]="false" [showCancelButton]="false" accept="application/pdf,application/msword,
-    application/vnd.openxmlformats-officedocument.wordprocessingml.document" maxFileSize="1000000">
+    <p-fileUpload name="uploadedDocs[]" [files]="uploadedDocs" multiple="multiple" (onSelect)="onUpload($event)" [showUploadButton]="false" [showCancelButton]="false" accept="application/pdf,application/msword,
+    application/vnd.openxmlformats-officedocument.wordprocessingml.document" maxFileSize="10000000">
+      <ng-template pTemplate="content">
+        <!-- <ul *ngIf="uploadedDocs?.length">
+          <li *ngFor="let file of uploadedDocs">
+            <div fxFlex>{{file.name}}</div>
+            <div  fxLayout="row" fxLayoutAlign="end center" fxFlex="200px">
+              <span>{{file.size}} KB</span>
+              <button type="button" icon="pi pi-times" pbutton="" ng-reflect-icon="pi pi-times" class="p-button p-component p-button-icon-only"><span class="p-button-icon pi pi-times" aria-hidden="true"></span><span aria-hidden="true"
+                  class="p-button-label"></span></button>
+            </div>
+          </li>
+        </ul> -->
+      </ng-template>
     </p-fileUpload>
-
   </div>
 
   <div class="action-btns" fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="20px">
