--- a/src/app/modules/on-boarding/components/on-boarding-personal/on-boarding-personal.component.html
+++ b/src/app/modules/on-boarding/components/on-boarding-personal/on-boarding-personal.component.html
@@ -40,7 +40,7 @@
     <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="20px">
       <cma-dropdown [form]="form" controlName="idType" label="ID Type" [options]="IdTypeOptions" placeholder="ID Type"></cma-dropdown>
       <cma-input [form]="form" controlName="idNo" label="ID No." placeholder="ID No."></cma-input>
-      <cma-upload [preview]="getPersonalUploadedFilePreview" (fileEmitter)="onPersonalImageChange($event)" [fileName]="getImagePreview('uploadedIdFile')"></cma-upload>
+      <cma-upload (fileEmitter)="onPersonalImageChange($event)" [file]="form.get('uploadPersonalIdFile').value" [fileName]="getFileName('uploadPersonalIdFile')"></cma-upload>
     </div>
   </div>
 
