--- a/src/app/shared/components/input-search/input-search.component.html
+++ b/src/app/shared/components/input-search/input-search.component.html
@@ -1,5 +1,5 @@
 <span class="p-input-icon-left">
   <i class="pi pi-search"></i>
-  <input type="text" pInputText placeholder="Search" />
-  <i class="pi pi-times"></i>
+  <input #input type="text" pInputText (input)="onInput($event)" placeholder="Search" />
+  <i class="pi pi-times" (click)="onClear()"></i>
 </span>
