--- a/src/app/modules/dashboard/components/dashboard-on-boarding-panel/dashboard-on-boarding-panel.component.html
+++ b/src/app/modules/dashboard/components/dashboard-on-boarding-panel/dashboard-on-boarding-panel.component.html
@@ -1,5 +1,5 @@
-<mat-accordion>
-  <mat-expansion-panel *ngFor="let item of ($onboardings | async); let i = index" [expanded]="i === 0">
+<mat-accordion *ngIf="($onboardings | async) as onboardings; else noRecords">
+  <mat-expansion-panel *ngFor="let item of onboardings; let i = index" [expanded]="i === 0">
     <mat-expansion-panel-header>
       <mat-panel-title>
         <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="10px">
@@ -26,3 +26,7 @@
     </div>
   </mat-expansion-panel>
 </mat-accordion>
+
+<ng-template #noRecords>
+  <div>No records</div>
+</ng-template>
