dropdown filter as params

--- a/src/app/shared/components/cma-multi-select/cma-multi-select.component.html
+++ b/src/app/shared/components/cma-multi-select/cma-multi-select.component.html
@@ -1,1 +1,3 @@
-<p-multiSelect [options]="options" [selectionLimit]="2" defaultLabel="Select Filter" optionLabel="label" display="chip"></p-multiSelect>
+<ng-container [formGroup]="form">
+  <p-multiSelect [options]="options" [formControlName]="controlName" [selectionLimit]="2" defaultLabel="Select Filter" optionLabel="label" display="chip"></p-multiSelect>
+</ng-container>
